RESOLVED FIXED193891
[Win][WebKitTestRunner] Error: test and reference images have different sizes. Test image is 784x561, reference image is 800x600
https://bugs.webkit.org/show_bug.cgi?id=193891
Summary [Win][WebKitTestRunner] Error: test and reference images have different sizes...
Fujii Hironori
Reported 2019-01-27 19:47:19 PST
[Win][WebKitTestRunner] Error: test and reference images have different sizes. Test image is 784x561, reference image is 800x600 Some test cases output smaller pixel images. > PS C:\webkit\gb> python ./Tools/Scripts/run-webkit-tests --release --wincairo fast/html/details-replace-summary-child.html > Using port 'wincairo-win10-wk2' > Test configuration: <win10, x86_64, release> > Placing test results in C:\webkit\gb\WebKitBuild\Release\bin64\layout-test-results > Using Release build > Pixel tests disabled > Regular timeout: 30000, slow test timeout: 150000 > Command line: C:\webkit\gb\WebKitBuild\Release\bin64\WebKitTestRunner.exe - > > Found 1 test; running 1, skipping 0. > > Verbose baseline search path: platform\wincairo-win10 -> platform\wincairo -> generic > > Baseline search path: platform\wincairo -> generic > > Running 1 test > > The _NT_SYMBOL_PATH environment variable is not set. Using Microsoft Symbol Server. > 'rm' is not recognized as an internal or external command, > operable program or batch file. > Running 1 WebKitTestRunner. > > [1/1] fast/html/details-replace-summary-child.html failed unexpectedly (text diff) > > Retrying 1 unexpected failure ... > > Running 1 WebKitTestRunner. > > fast/html/details-replace-summary-child.html : ImageDiff produced stderr output: > Error: test and reference images have different sizes. Test image is 784x561, reference image is 800x600 > ImageDiff crashed > [1/1] fast/html/details-replace-summary-child.html failed unexpectedly (text diff, image diff) > > 0 tests ran as expected, 1 didn't: > > > Regressions: Unexpected text-only failures (1) > fast/html/details-replace-summary-child.html [ Failure ] > > PS C:\webkit\gb>
Attachments
Patch (4.20 KB, patch)
2019-01-27 23:42 PST, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2019-01-27 23:42:27 PST
Fujii Hironori
Comment 2 2019-01-28 17:00:32 PST
Comment on attachment 360323 [details] Patch Clearing flags on attachment: 360323 Committed r240622: <https://trac.webkit.org/changeset/240622>
Fujii Hironori
Comment 3 2019-01-28 17:00:34 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2019-01-28 17:01:50 PST
Note You need to log in before you can comment on or make changes to this bug.